--- a/.env.example
+++ b/.env.example
@@ -48,14 +48,25 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=tu_usuario_mailtrap
+MAIL_PASSWORD=tu_contraseña_mailtrap
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
+
+ADMIN_EMAIL=
+
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=your-app-id
+PUSHER_APP_KEY=your-app-key
+PUSHER_APP_SECRET=your-app-secret
+PUSHER_APP_CLUSTER=your-app-cluster
+
+VITE_PUSHER_APP_KEY=
+VITE_PUSHER_APP_CLUSTER=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
